# gnome-tlp

./: LICENSE  README.md  pyproject.toml
src/gnome_tlp/: __main__.py
src/gnome_tlp/img/: export.py
