[project]
name = "gnome-tlp"
version = "0.1.0"
description = 'A GNOME AppIndicator for the TLP power manager.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "Simon D Fink", email = "finksim@fim.uni-passau.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "sh", # "gi"
]

[project.scripts]
gnome-tlp = "gnome_tlp.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
